# cookiecutter-pypackage

./: cookiecutter.json
{{cookiecutter.project_slug}}/: pyproject.toml  requirements_dev.txt  setup.cfg  setup.py
{{cookiecutter.project_slug}}/docs/: init_api.bat
