[metadata]
name = {{ cookiecutter.project_slug }}
author = {{ cookiecutter.full_name.replace('\"', '\\\"') }}
author_email = {{ cookiecutter.email }}
python_requires = >=3.5
version = attr: {{ cookiecutter.project_slug }}.__version__
description = {{ cookiecutter.project_short_description }}
long_description = file: README.rst, HISTORY.rst, LICENSE.rst
url = https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}
keywords = {{ cookiecutter.project_slug }}
{%- set license_classifiers = {
    'MIT license': 'License :: OSI Approved :: MIT License',
    'BSD license': 'License :: OSI Approved :: BSD License',
    'ISC license': 'License :: OSI Approved :: ISC License (ISCL)',
    'Apache Software License 2.0': 'License :: OSI Approved :: Apache Software License',
    'GNU General Public License v3': 'License :: OSI Approved :: GNU General Public License v3 (GPLv3)'
} %}
{%- if cookiecutter.open_source_license in license_classifiers %}
license = {{ cookiecutter.open_source_license }}
{%- endif %}
classifiers =
    Framework :: N/A
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
{%- if cookiecutter.open_source_license in license_classifiers %}
    {{ license_classifiers[cookiecutter.open_source_license] }},
{%- endif %}
    Natural Language :: English
    # Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
zip_safe = False
include_package_data = True
packages = find:
# scripts =
#     bin/first.py
#     bin/second.py
install_requires =
{%- if cookiecutter.command_line_interface|lower == 'click' %}
    Click>=7.0
{%- endif %}
    # importlib; python_version == "2.6"
test_suite = tests
{%- if cookiecutter.use_pytest == 'y' %}
tests_require = pytest>=3
{%- endif %}

# [options.package_data]
# * = *.txt, *.rst
# hello = *.msg

# [options.extras_require]
# pdf = ReportLab>=1.2; RXP
# rest = docutils>=0.3; pack ==1.1, ==1.3

[options.packages.find]
include =
    {{ cookiecutter.project_slug }}
    {{ cookiecutter.project_slug }}.*

{%- if 'no' not in cookiecutter.command_line_interface|lower %}
[options.entry_points]
console_scripts =
    {{ cookiecutter.project_slug }} = {{ cookiecutter.project_slug }}.cli:main
{%- endif %}

# [options.data_files] # deprecated in setuptools. https://setuptools.readthedocs.io/en/latest/references/keywords.html
# /etc/my_package =
#     site.d/00_default.conf
#     host.d/00_default.conf
# data = data/img/logo.png, data/svg/icon.svg

[bumpversion]
current_version = attr: {{ cookiecutter.project_slug }}.__version__
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:{{ cookiecutter.project_slug }}/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[aliases]
# Define setup.py command aliases here
{%- if cookiecutter.use_pytest == 'y' %}
test = pytest

[tool:pytest]
collect_ignore = ['setup.py']
{%- endif %}

